Camino only: Bug 340273 - Can't drag proxy icons from tabs to location bar if focus is outside location bar.  Patch by murph <camino@seanmurph.com>.  r=smorgan sr=smfr